# noctiluca

./: .gitignore  README.md  hello.py  main.py  pyproject.toml  ui.py  websockets.py
docs/: initial_context.md
images/: noctiluca-bw-medium.xcf  noctiluca-bw.xcf
src/noctiluca/: main.py
